# pyleft

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  main.py  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: pre-commit_update.yml  publish.yml  test.yml  tests.yml
pyleft/: __main__.py  api.py  console.py  models.py  path_utils.py  printing.py  settings.py  utils.py
tests/: test_main.py  test_unit.py
tests/files/: fail_1.py  fail_2.py  fail_3.py  fail_4.py  options_1.py  pass.py  pass_2.pyi
