[tool.poetry]
    name = "pyleft"
    version = "1.2.0"
    description = "Python type annotation existence checker"
    license = "MIT"
    readme = "README.md"
    homepage = "https://github.com/NathanVaughn/pyleft"
    repository = "https://github.com/NathanVaughn/pyleft.git"
    authors = ["Nathan Vaughn <nvaughn51@gmail.com>"]
    classifiers = [
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Software Development :: Quality Assurance",
    ]

[tool.poetry.urls]
    Issues = "https://github.com/NathanVaughn/pyleft/issues"

[tool.poetry.dependencies]
    python = ">=3.7,<4.0"

    # match Black's dependencies
    # https://github.com/psf/black/blob/e712e48e06420d9240ce95c81acfcf6f11d14c83/pyproject.toml#L69-L71
    tomli    = { version = ">=1.1.0", python = "<3.11" }
    pathspec = ">=0.9.0"

[tool.poetry.group.dev.dependencies]
    pytest     = "^7.2.0"
    pytest-cov = "^4.0.0"
    pre-commit = "^2.21.0"

[tool.pyright]
    typeCheckingMode = "basic"
    venvPath         = "."
    venv             = ".venv"

[tool.pyleft]
    exclude = ["tests/**"]

[tool.ruff]
    ignore = ["E501"]

[tool.poetry.scripts]
    pyleft = "pyleft.console:run"

[build-system]
    requires      = ["poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"
