[project]
    name = "pyleft"
    version = "1.2.3"
    description = "Python type annotation existence checker"
    readme = "README.md"
    authors = [{ name = "Nathan Vaughn", email = "nath@nvaughn.email" }]
    classifiers = [
        "License :: OSI Approved :: MIT License",
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Software Development :: Quality Assurance",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
    ]
    requires-python = ">=3.9"
    # match Black's dependencies
    # https://github.com/psf/black/blob/e712e48e06420d9240ce95c81acfcf6f11d14c83/pyproject.toml#L69-L71
    dependencies = [
        "tomli>=1.1.0;python_version<'3.11'",
        "pathspec>=0.9.0",
    ]

[project.urls]
    Homepage   = "https://github.com/NathanVaughn/pyleft"
    Repository = "https://github.com/NathanVaughn/pyleft.git"
    Issues     = "https://github.com/NathanVaughn/pyleft/issues"

[tool.uv]
    dev-dependencies = [
        "pre-commit>=3.2.0",
        "pre-commit-uv>=3.8.0",
        "pytest>=7.3.1",
        "pytest-cov>=4.1",
    ]

[tool.pyright]
    typeCheckingMode           = "basic"
    venvPath                   = "."
    venv                       = ".venv"

[tool.pyleft]
    exclude = ["tests/**"]

[project.scripts]
    pyleft = "pyleft.console:run"

[build-system]
    requires      = ["hatchling"]
    build-backend = "hatchling.build"

